Bug 131385 - Fail silently if the LLVM dylib isn't found
Summary: Fail silently if the LLVM dylib isn't found
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 112840
  Show dependency treegraph
 
Reported: 2014-04-08 12:49 PDT by Filip Pizlo
Modified: 2014-04-08 13:04 PDT (History)
7 users (show)

See Also:


Attachments
the patch (5.06 KB, patch)
2014-04-08 12:57 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2014-04-08 12:49:33 PDT
Patch forthcoming.
Comment 1 Filip Pizlo 2014-04-08 12:57:10 PDT
Created attachment 228874 [details]
the patch
Comment 2 Mark Hahnenberg 2014-04-08 13:02:28 PDT
Comment on attachment 228874 [details]
the patch

r=me
Comment 3 Filip Pizlo 2014-04-08 13:04:39 PDT
Landed in http://trac.webkit.org/changeset/166948