Fail silently if the LLVM dylib isn't found https://bugs.webkit.org/show_bug.cgi?id=131385

Reviewed by Mark Hahnenberg.

* dfg/DFGPlan.cpp:
(JSC::DFG::Plan::compileInThreadImpl):
* llvm/InitializeLLVM.cpp:
(JSC::initializeLLVM):
* llvm/InitializeLLVM.h:
* llvm/InitializeLLVMPOSIX.cpp:
(JSC::initializeLLVMPOSIX):



Canonical link: https://commits.webkit.org/149433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166948 268f45cc-cd09-0410-ab3c-d52691b4dbfc